# blackjack-reinforcement-learning

./: README.md  pyproject.toml
blackjack-reinforcement-learning/: main.py
blackjack-reinforcement-learning/DDQN/: .gitignore  analyze.py  deep_q_learning.py  main.py  utils.py
blackjack-reinforcement-learning/DQN/: .gitignore  analyze.py  dqn_blackjack_50.h5  heatmap.py  main.py  optimization.py  plot.py  pyproject.toml  requirements.txt  sb_main.py  utils.py
blackjack-reinforcement-learning/DQN/logs/: testing_20250206_225521.csv  training_20250202_124858.csv  training_20250202_125100.csv  training_20250202_125549.csv  training_20250206_225318.csv  training_20250206_225344.csv
blackjack-reinforcement-learning/QRDQN/: main.py  optimize.py  plot.py  pyproject.toml
