[tool.poetry]
name = "blackjack-reinforcement-learning"
version = "0.1.0"
description = ""
authors = ["Aleksandar <aleksandar@filipovski.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gym = "^0.26.2"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
